--- a/writedown/npt-neq/ref.bib
+++ b/writedown/npt-neq/ref.bib
@@ -2,6 +2,19 @@
 % Encoding: ISO8859_1
 
 
+@ARTICLE{parrinello1981polymorphic,
+  author = {Parrinello, M. and Rahman, A.},
+  title = {Polymorphic transitions in single crystals: A new molecular dynamics
+	method},
+  journal = {Journal of Applied Physics},
+  year = {1981},
+  volume = {52},
+  pages = {7182},
+  file = {parrinello1981polymorphic.pdf:parrinello1981polymorphic.pdf:PDF},
+  review = {Parrinello-Rahman barostat},
+  timestamp = {2010.05.13}
+}
+
 
 @article{scovell2000phase,
   title={Phase transitions in vapor-deposited water under the influence of high surface electric fields},
