a lot of changes according to Giovanni.

--- a/writedown/npt-neq/ref.bib
+++ b/writedown/npt-neq/ref.bib
@@ -1,6 +1,40 @@
 % This file was created with JabRef 2.8.
 % Encoding: ISO8859_1
 
+@INPROCEEDINGS{ciccotti1993theoretical,
+  author = {Ciccotti, G. and Pierleoni, C. and Ryckaert, J.P.},
+  title = {Theoretical foundation and rheological application of non-equilibrium
+	molecular dynamics},
+  booktitle = {Microscopic simulations of complex hydrodynamic phenomena},
+  year = {1993},
+  pages = {25--45},
+  organization = {Plenum Press},
+  file = {ciccotti1993theoretical.pdf:ciccotti1993theoretical.pdf:PDF},
+  timestamp = {2013.11.07}
+}
+
+@article{palla2008bulk,
+  title={Bulk viscosity of the Lennard-Jones system at the triple point by dynamical nonequilibrium molecular dynamics},
+  author={Palla, P.L. and Pierleoni, C. and Ciccotti, G.},
+  journal={Physical Review E},
+  volume={78},
+  number={2},
+  pages={021204},
+  year={2008},
+  publisher={APS},
+  timestamp = {2013.11.07}
+}
+
+@ARTICLE{prada2013quest,
+  author = {Prada-Gracia, Diego and Shevchuk, Roman and Rao, Francesco},
+  title = {The quest for self-consistency in hydrogen-bond definitions},
+  journal = {The Journal of Chemical Physics},
+  year = {2013},
+  volume = {139},
+  pages = {084501},
+  file = {prada2013quest.pdf:prada2013quest.pdf:PDF},
+  timestamp = {2013.10.04}
+}
 
 @ARTICLE{parrinello1981polymorphic,
   author = {Parrinello, M. and Rahman, A.},
